Some modifications.